@startuml
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

entity "usuarios" as usuarios {
  +id [PK]
  email
  username
  nombre
  apellido
  rol
  estado
  prestamos_activos
  max_prestamos_permitidos
  multas_pendientes
  sancionado_hasta
}

entity "estudiantes" as estudiantes {
  +id [PK]
  usuario_id [FK]
  carrera
  matricula
  semestre_actual
  fecha_ingreso
}

entity "docentes" as docentes {
  +id [PK]
  usuario_id [FK]
  numero_empleado
  departamento
  especialidad
  tipo_contrato
}

entity "administradores" as administradores {
  +id [PK]
  usuario_id [FK]
  area
  cargo
  nivel_acceso
  supervisor_id [FK]
}

entity "invitaciones_registro" as invitaciones_registro {
  +id [PK]
  token
  email_invitado
  rol_asignado
  estado
  creado_por_id [FK]
  usuario_registrado_id [FK]
}

entity "usuarios_notificacion" as usuarios_notificacion {
  +id [PK]
  usuario_id [FK]
  tipo
  titulo
  prioridad
  leida
}

entity "usuarios_configuracion_notificacion" as usuarios_config_notif {
  +id [PK]
  usuario_id [FK]
  prestamos_email
  prestamos_push
  multas_email
  multas_push
}

entity "usuarios_registro_auditoria" as usuarios_auditoria {
  +id [PK]
  usuario_id [FK]
  accion
  nivel_riesgo
  exitosa
}

entity "usuarios_sesion_auditoria" as usuarios_sesion {
  +id [PK]
  usuario_id [FK]
  session_key
  ip_address
  activa
}

entity "usuarios_acceso_recurso" as usuarios_acceso {
  +id [PK]
  usuario_id [FK]
  recurso_tipo
  recurso_id
  tipo_acceso
}

entity "usuarios_configuracion_auditoria" as usuarios_config_aud {
  +id [PK]
  actualizada_por_id [FK]
  dias_retencion_logs
  alertas_activas
}

entity "libros" as libros {
  +id [PK]
  titulo
  autor
  isbn
  categoria
  estado
  cantidad_total
  cantidad_disponible
}

entity "prestamos" as prestamos {
  +id [PK]
  libro_id [FK]
  usuario_id [FK]
  aprobado_por_id [FK]
  estado
  fecha_prestamo
  fecha_devolucion_esperada
  renovaciones
}

entity "reservas" as reservas {
  +id [PK]
  libro_id [FK]
  usuario_id [FK]
  estado
  fecha_reserva
  fecha_expiracion
}

entity "bibliografias" as bibliografias {
  +id [PK]
  docente_id [FK]
  curso
  programa
  activa
  es_publica
}

entity "bibliografias_libros" as bibliografias_libros {
  +id [PK]
  bibliografia_id [FK]
  libro_id [FK]
}

entity "sanciones" as sanciones {
  +id [PK]
  usuario_id [FK]
  prestamo_id [FK]
  tipo
  monto
  dias_suspension
  estado
}

entity "notificaciones" as notificaciones_libros {
  +id [PK]
  usuario_id [FK]
  titulo
  mensaje
  tipo
  leida
}

usuarios ||--|| estudiantes : usuario
usuarios ||--|| docentes : usuario
usuarios ||--|| administradores : usuario
administradores ||--o{ administradores : supervisor
invitaciones_registro }o--|| usuarios : creado_por
invitaciones_registro o|--|| usuarios : usuario_registrado
usuarios_notificacion }o--|| usuarios : usuario
usuarios_config_notif ||--|| usuarios : usuario
usuarios_auditoria }o--|o usuarios : usuario
usuarios_sesion }o--|| usuarios : usuario
usuarios_acceso }o--|| usuarios : usuario
usuarios_config_aud }o--|o usuarios : actualizada_por
prestamos }o--|| libros : libro
prestamos }o--|| usuarios : usuario
prestamos |o--|| usuarios : aprobado_por
reservas }o--|| libros : libro
reservas }o--|| usuarios : usuario
bibliografias }o--|| usuarios : docente
bibliografias }o--o{ libros : libros
sanciones }o--|| usuarios : usuario
sanciones |o--|| prestamos : prestamo
notificaciones_libros }o--|| usuarios : usuario

@enduml
